<resources>
    <string name="app_name">GitHubTrailblazer</string>
    <string name="app_project_service_default">gh:</string>
    <string name="app_project_name_default">Project</string>
    <string name="app_project_lang_default">Language</string>
    <string name="app_project_desc_default">Missing or no description.</string>
    <string name="app_project_rating_default">0</string>
    <string name="app_project_comments_default">0</string>
    <string name="app_project_stars_default">0</string>
    <string name="app_project_forks_default">0</string>
    <string name="app_project_user_default">User</string>
    <string name="app_optionToggle_default">All</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_saved">Saved Repositories</string>
    <string name="menu_myrepos">My Repositories</string>
    <string name="menu_settings">Settings</string>
    <string name="repo_searchbar_hint_default">Search Repositories</string>
    <string name="issue_searchbar_hint_default">Search Issues</string>
    <string name="app_project_link_default">some-random-project.github.io</string>
    <string name="repo_detail_user_name_default">Krusher99</string>
    <string name="repo_detail_description_default">some random project description some random project description some random project description some random project description.</string>
    <string name="repo_detail_project_default">some-random-project</string>
    <string-array name="feed_filter_array">
        <item>Best Match</item>
        <item>Most Stars</item>
        <item>Fewest Stars</item>
        <item>Most Forks</item>
        <item>Fewest Forks</item>
        <item>Recently Updated</item>
        <item>Least Recently Updated</item>
    </string-array>
    <string name="open_source_libs">Git Trailblazer is build using open-source software:\n
        <a href="https://github.com/apollographql/apollo-android">Apollo Android</a> (<a href="https://raw.githubusercontent.com/apollographql/apollo-android/master/LICENSE">license</a>)\n
        <a href="https://fontawesome.com/">Font Awesome</a> (<a href="https://fontawesome.com/license/free">license</a>)\n
        <a href="https://source.android.com/">Android Open Source Project</a> (<a href="https://source.android.com/license">license</a>)\n
    </string>
</resources>
