<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_feed">
    <fragment
            android:id="@+id/nav_feed"
            android:name="com.example.githubtrailblazer.ui.feed.FeedFragment"
            android:label="@string/menu_explore"
            tools:layout="@layout/fragment_feed"/>
    <fragment
            android:id="@+id/nav_saved"
            android:name="com.example.githubtrailblazer.ui.saved.SavedFragment"
            android:label="@string/menu_saved"
            tools:layout="@layout/fragment_saved"/>
    <fragment
            android:id="@+id/nav_myrepos"
            android:name="com.example.githubtrailblazer.ui.myrepos.MyReposFragment"
            android:label="@string/menu_myrepos"
            tools:layout="@layout/fragment_myrepos"/>
    <fragment
            android:id="@+id/nav_settings"
            android:name="com.example.githubtrailblazer.ui.settings.SettingsFragment"
            android:label="@string/menu_settings"
            tools:layout="@layout/fragment_settings"/>
</navigation>