<?xml version="1.0" encoding="utf-8"?>
<com.example.githubtrailblazer.components.repocard.RepoCard
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_repo_card"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/app_project_margin_md"
        android:padding="@dimen/app_project_margin_md">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:layout_marginBottom="@dimen/app_project_margin_md">
        <ImageView
                android:layout_width="45dp" android:layout_height="45dp"
                android:src="@drawable/default_profile" android:id="@+id/projectCard__profilePic"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginStart="@dimen/app_project_margin_md"
                android:layout_weight="1" >
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/projectCard__service" android:text="@string/app_project_service_default"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textColor="@color/secondary1"
                        android:textSize="@dimen/text_md"/>
                <TextView
                        android:id="@+id/projectCard__name" android:text="@string/app_project_name_default"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:maxLines="1" android:ellipsize="end" android:textColor="@color/secondary1"
                        android:textSize="@dimen/text_md"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:id="@+id/projectCard__langContainer">
                <ImageView
                        android:id="@+id/projectCard__langCirc" android:background="@drawable/bg_lang_circ"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                <TextView
                        android:id="@+id/projectCard__lang" android:text="@string/app_project_lang_default"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/app_project_margin_xs" android:textColor="@color/secondary1"
                        android:textSize="@dimen/text_md"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                app:srcCompat="@drawable/ellipsis_v_solid" android:layout_gravity="end"
                android:id="@+id/projectCard__btnActions" android:background="@android:color/transparent"
                android:padding="5dp"/>
    </LinearLayout>
    <TextView
            android:id="@+id/projectCard__desc" android:text="@string/app_project_desc_default"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_project_margin_md"
            android:maxLines="3" android:ellipsize="end" android:textColor="@color/secondary1"
            android:textSize="@dimen/text_md"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAligned="false">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
            <ImageButton
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow_alt_circle_up"
                    android:id="@+id/projectCard__btnUpvote" android:background="@android:color/transparent"
                    android:padding="5dp"/>
            <TextView
                    android:id="@+id/projectCard__rating" android:text="@string/app_project_rating_default"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:textColor="@color/secondary1"
                    android:textSize="@dimen/text_sm"/>
            <ImageButton
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow_alt_circle_down"
                    android:id="@+id/projectCard__btnDownvote" android:background="@android:color/transparent"
                    android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center">
                <ImageButton
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        app:srcCompat="@drawable/comment_alt_solid"
                        android:id="@+id/projectCard__btnComment" android:background="@android:color/transparent"
                        android:textColor="@color/secondary1" android:padding="5dp"/>
                <TextView
                        android:id="@+id/projectCard__comments" android:text="@string/app_project_comments_default"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textColor="@color/secondary1"
                        android:textSize="@dimen/text_sm"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center">
                <ImageButton
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        app:srcCompat="@drawable/star_solid"
                        android:id="@+id/projectCard__btnStar" android:background="@android:color/transparent"
                        android:padding="5dp"/>
                <TextView
                        android:id="@+id/projectCard__stars" android:text="@string/app_project_stars_default"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textColor="@color/secondary1"
                        android:textSize="@dimen/text_sm"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center">
                <ImageButton
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        app:srcCompat="@drawable/sitemap_solid"
                        android:id="@+id/projectCard__btnFork" android:background="@android:color/transparent"
                        android:padding="5dp"/>
                <TextView
                        android:id="@+id/projectCard__forks" android:text="@string/app_project_forks_default"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textColor="@color/secondary1"
                        android:textSize="@dimen/text_sm"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.example.githubtrailblazer.components.repocard.RepoCard>